<resources>
    <string name="app_name">animation</string>
    <string name="view_animation">View Animation</string>
    <string name="frame_animation">Frame Animation</string>
    <string name="property_animation">Property Animation</string>
    <string name="normal_view_animation">normal view animation</string>
    <string name="special_view_animation">special view animation</string>
    <string name="flicker_view">flicker view</string>
    <string name="rotating_circle_view">rotating circle view</string>
    <string name="overturn_view">overturn</string>
    <string name="scale_view">scale</string>
    <string name="install">install</string>
    <string name="activity_animation">activity animation</string>
    <string name="layout_animation">layout animation</string>
    <string name="test_info">activity animation</string>
    <string name="start_layout_animation">start layout animation</string>
    <string name="end_layout_animation">end layout animation</string>
    <string name="rotating_3d">rotating 3d view</string>
    <string name="text">text</string>
    <string name="picture">picture</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="property_flicker">flicker</string>
    <string name="property_rotate">synthesized attribute</string>
    <string name="property_rotating_3d">rotating_3d</string>
    <string name="property_layout_animation">layoutTransition</string>
    <string name="property_type_evaluator">customTypeEvaluator</string>
    <string name="property_name">custom propertyName</string>
    <string name="add_view">add view</string>
    <string name="remove_view">remove view</string>
    <string name="key_frame">key frame</string>
</resources>
