<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        style="@style/view_animation_item"
        android:onClick="viewAnimation"
        android:text="@string/view_animation"
        />


    <LinearLayout
        android:id="@+id/view_Animation_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/view_animation_green"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/view_animation_item"
            android:onClick="normalViewAnimation"
            android:text="@string/normal_view_animation"
            />

        <TextView
            style="@style/view_animation_item"
            android:onClick="specialViewAnimation"
            android:text="@string/special_view_animation"
            />

    </LinearLayout>

    <TextView
        style="@style/view_animation_item"
        android:onClick="frameAnimation"
        android:text="@string/frame_animation"
        />

    <TextView
        style="@style/view_animation_item"
        android:onClick="propertyAnimation"
        android:text="@string/property_animation"
        />
</LinearLayout>
