<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <TextView
        style="@style/view_animation_item"
        android:layout_marginTop="50dp"
        android:onClick="flicker"
        android:text="@string/flicker_view"
        />

    <TextView
        style="@style/view_animation_item"
        android:onClick="rotate"
        android:text="@string/rotating_circle_view"
        />


    <TextView
        style="@style/view_animation_item"
        android:onClick="rotate3d"
        android:text="@string/rotating_3d"
        />
</LinearLayout>